# simple-research-agent

./: .env.tempate  README.md  pyproject.toml
examples/: factorio-city-blocks-1.txt  factorio-city-blocks-2.txt  factorio-city-blocks-3.txt  fetch-summarization.txt  historic-capitals-of-france.txt  search-analysis.txt  vermont-top-5.txt
simple_research/: __main__.py  client.py  memory.py  tools.py  ui.py
simple_research/agents/: __init__.py  base.py  baseline.py  fetch.py  output.py  planning.py  search.py
tests/: conftest.py  test_memory.py  test_tools.py
tests/agents/: test_baseline.py  test_fetch.py  test_output.py  test_planning.py  test_search.py
